Fixed broken css in firefox

--- a/linda/linda_app/static/css/style.css
+++ b/linda/linda_app/static/css/style.css
@@ -2178,6 +2178,7 @@ input, textarea {
 #builder_workspace .class-instance .property-table > .property-row > *, #builder_workspace .class-instance .property-table > .header-row > * {
     display: table-cell;
     padding: 5px;
+    white-space: nowrap;
 }
 
 #builder_workspace .class-instance .property-table .property-show,
